# Game-Engine-Version-5

./: CMakeLists.txt  Dependancies needed  Main.cpp  Main.h  README.md  glad.c
Enviroments/: Engine.cpp  Engine.h
Enviroments/Audio/: Audio.cpp  Audio.h  AudioBuffer.cpp  AudioBuffer.h  AudioController.cpp  AudioController.h  AudioSource.cpp  AudioSource.h
Enviroments/Common/: Commands.cpp  Commands.h  Console.cpp  Console.h  Parser.cpp  Parser.h  Shader.cpp  Shader.h  Utility.cpp  Utility.h
Enviroments/Dynamic/: Entity.cpp  Entity.h  Player.cpp  Player.h
Enviroments/Humanoid/: Actor.cpp  Actor.h  ActorLogic.cpp  ActorLogic.h  Animation.cpp  Animation.h
Enviroments/Interpreter/: Lexer.cpp  Lexer.h  ScriptParser.cpp  ScriptParser.h  VirtualMachine.cpp  VirtualMachine.h
Enviroments/Modules/: BinarySpaceCollisions.cpp  BinarySpaceCollisions.h  BinarySpacePartition.cpp  BinarySpacePartition.h  FrustrumCulling.cpp  FrustrumCulling.h  Viewport.cpp  Viewport.h
Enviroments/Network/Client/: NetworkClient.cpp  NetworkClient.h
Enviroments/Network/Server/: NetworkServer.cpp  NetworkServer.h
Enviroments/Rendering/: Camera.cpp  Camera.h  Lighting.cpp  Lighting.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h
Enviroments/Rendering/Buffers/: ElementBuffer.cpp  ElementBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Enviroments/Rendering/Effects/Particle2D/: Particle2D.cpp  Particle2D.h
Enviroments/Rendering/Interface/Core/: Frame.cpp  Frame.h  Image.cpp  Image.h  Label.cpp  Label.h
Enviroments/Rendering/Scene/: Partition.cpp  Partition.h  Scene.cpp  Scene.h
Enviroments/Rendering/Terrain/: Terrain.cpp  Terrain.h  Water.cpp  Water.h
Enviroments/World/: Instance.cpp  Instance.h  World.cpp  World.h
Physics/: Licence  Physics.cpp  Physics.h
Physics/Actions/: HumanoidPhysics.cpp  HumanoidPhysics.h  MeshShapeTransformation.cpp  MeshShapeTransformation.h
Physics/Utilites/: BodyActivation.cpp  BodyActivation.h
